@@ -1,0 +1,1 @@
+Fix reporting offset of the RE error in searchengine.
